--- a/index.html
+++ b/index.html
@@ -4,8 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test_w_concept0702</title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <main>
+        <div class="container_wrap">
+            <div class="left_top">
+                <p>지금 주목해야 할 브랜드</p>
+                <a href="#"><img src="./images/0001.png" alt="지금 20대가 주목해야 할 브랜드"></a>
+                <img src="./images/favorite_02.png" alt="찜하기">
+            </div>
+            <div class="right_top"> 
+                <h1>브랜드의 감성을 담아</h1>
+                <p>히어리 | ~30%</p>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="./images/002.jpg" alt="Aurora Shirring Duffle Bag_Black">
+                            <img src="./images/favorite_01.png" id='cart'alt="Aurora Shirring Duffle Bag_Black">
+                            <p>히어리</p>
+                            <p>Aurora Shirring Duffle Bag_Black</p>
+                            <span>24%</span>
+                            <p>73,576</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/003.jpg" alt="Aurora Shirring Duffle Bag_Lilac">
+                            <img src="./images/favorite_01.png" alt="Aurora Shirring Duffle Bag_Lilac">
+                            <p>히어리</p>
+                            <p>Aurora Shirring Duffle Bag_Lilac</p>
+                            <span>24%</span>
+                            <p>73,576</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/004.jpg" alt="[단독]Aurora Shirring Duffle Bag_Dot">
+                            <img src="./images/favorite_01.png" alt="Aurora Shirring Duffle Bag_Dot">
+                            <p>히어리</p>
+                            <p>[단독]Aurora Shirring Duffle Bag_Dot</p>
+                            <span>24%</span>
+                            <p>73,576</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+                <div class="container_wrap2">
+                    <h2>고객님 취향에 맞는 상품 추천</h2>
+                    <p>더보기</p>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="./images/005.jpg" alt="Cencel See-Through Classic Shirt - 3COL">
+                                <img src="./images/favorite_01.png" alt="Cencel See-Through Classic Shirt - 3COL">
+                                <p>비바셔스</p>
+                                <p>Cencel See-Through Classic Shirt - 3COL</p>
+                                <span>39%</span>
+                                <p>31,232</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/006.jpg" alt="[단독][NEW 컬러추가] Basic Round Linen Cardigan">
+                                <img src="./images/favorite_01.png" alt="Basic Round Linen Cardigan">
+                                <p>레테라</p>
+                                <p>[단독][NEW 컬러추가] Basic Round Linen Cardigan</p>
+                                <span>29%</span>
+                                <p>48,926</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/007.jpg" alt="[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors">
+                                <img src="./images/favorite_01.png" alt="[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors">
+                                <p>룩캐스트</p>
+                                <p>[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors</p>
+                                <span>34%</span>
+                                <p>110,715</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/008.jpg" alt="OORIGINAL BLACK - 조리 블랙">
+                                <img src="./images/favorite_01.png" alt="OORIGINAL BLACK - 조리 블랙">
+                                <p>우포스</p>
+                                <p>OORIGINAL BLACK - 조리 블랙</p>
+                                <p>69,000</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/009.jpg" alt="쇼콜라웨이브 미디스커트">
+                                <img src="./images/favorite_01.png" alt="쇼콜라웨이브 미디스커트">
+                                <p>메무아</p>
+                                <p>쇼콜라웨이브 미디스커트</p>
+                                <span>41%</span>
+                                <p>39,124</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./images/010.jpg" alt="TOKYO W - JI0183">
+                                <img src="./images/favorite_01.png" alt="TOKYO W - JI0183">
+                                <p>아디다스</p>
+                                <p>TOKYO W - JI0183</p>
+                                <p>139,000</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+    </main>
 </body>
 </html>
