--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li>
                         <a href="#">
                             <img src="./images/002.jpg" alt="Aurora Shirring Duffle Bag_Black">
-                            <img src="./images/favorite_01.png" id='cart'alt="Aurora Shirring Duffle Bag_Black">
+                            <img src="./images/favorite_01.png" id='cart'alt="찜하기">
                             <p>히어리</p>
                             <p>Aurora Shirring Duffle Bag_Black</p>
                             <span>24%</span>
@@ -32,7 +32,7 @@
                     <li>
                         <a href="#">
                             <img src="./images/003.jpg" alt="Aurora Shirring Duffle Bag_Lilac">
-                            <img src="./images/favorite_01.png" alt="Aurora Shirring Duffle Bag_Lilac">
+                            <img src="./images/favorite_01.png" alt="찜하기">
                             <p>히어리</p>
                             <p>Aurora Shirring Duffle Bag_Lilac</p>
                             <span>24%</span>
@@ -42,7 +42,7 @@
                     <li>
                         <a href="#">
                             <img src="./images/004.jpg" alt="[단독]Aurora Shirring Duffle Bag_Dot">
-                            <img src="./images/favorite_01.png" alt="Aurora Shirring Duffle Bag_Dot">
+                            <img src="./images/favorite_01.png" alt="찜하기">
                             <p>히어리</p>
                             <p>[단독]Aurora Shirring Duffle Bag_Dot</p>
                             <span>24%</span>
@@ -59,7 +59,7 @@
                         <li>
                             <a href="#">
                                 <img src="./images/005.jpg" alt="Cencel See-Through Classic Shirt - 3COL">
-                                <img src="./images/favorite_01.png" alt="Cencel See-Through Classic Shirt - 3COL">
+                                <img src="./images/favorite_01.png" alt="찜하기">
                                 <p>비바셔스</p>
                                 <p>Cencel See-Through Classic Shirt - 3COL</p>
                                 <span>39%</span>
@@ -69,7 +69,7 @@
                         <li>
                             <a href="#">
                                 <img src="./images/006.jpg" alt="[단독][NEW 컬러추가] Basic Round Linen Cardigan">
-                                <img src="./images/favorite_01.png" alt="Basic Round Linen Cardigan">
+                                <img src="./images/favorite_01.png" alt="찜하기">
                                 <p>레테라</p>
                                 <p>[단독][NEW 컬러추가] Basic Round Linen Cardigan</p>
                                 <span>29%</span>
@@ -79,7 +79,7 @@
                         <li>
                             <a href="#">
                                 <img src="./images/007.jpg" alt="[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors">
-                                <img src="./images/favorite_01.png" alt="[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors">
+                                <img src="./images/favorite_01.png" alt="찜하기">
                                 <p>룩캐스트</p>
                                 <p>[단독]엠마 린넨 스트랩 자켓 / EMMA LINEN STRAP JACKET_3colors</p>
                                 <span>34%</span>
@@ -89,7 +89,7 @@
                         <li>
                             <a href="#">
                                 <img src="./images/008.jpg" alt="OORIGINAL BLACK - 조리 블랙">
-                                <img src="./images/favorite_01.png" alt="OORIGINAL BLACK - 조리 블랙">
+                                <img src="./images/favorite_01.png" alt="찜하기">
                                 <p>우포스</p>
                                 <p>OORIGINAL BLACK - 조리 블랙</p>
                                 <p>69,000</p>
@@ -98,7 +98,7 @@
                         <li>
                             <a href="#">
                                 <img src="./images/009.jpg" alt="쇼콜라웨이브 미디스커트">
-                                <img src="./images/favorite_01.png" alt="쇼콜라웨이브 미디스커트">
+                                <img src="./images/favorite_01.png" alt="찜하기">
                                 <p>메무아</p>
                                 <p>쇼콜라웨이브 미디스커트</p>
                                 <span>41%</span>
@@ -108,7 +108,7 @@
                         <li>
                             <a href="#">
                                 <img src="./images/010.jpg" alt="TOKYO W - JI0183">
-                                <img src="./images/favorite_01.png" alt="TOKYO W - JI0183">
+                                <img src="./images/favorite_01.png" alt="찜하기">
                                 <p>아디다스</p>
                                 <p>TOKYO W - JI0183</p>
                                 <p>139,000</p>
